--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ function kirimFormWA(){
     const f3 = document.getElementById('field3').value;
     const f4 = document.getElementById('field4').value;
 
-    const pesan = `DATA:%0ANAMA. ${f1}%0ANOMOR. ${f2}%0AKEPERLUAN. ${f3}%0AKELUHAN (OPSIONAL) . ${f4}`;
+    const pesan = `DATA %0ANAMA : ${f1}%0ANOMOR : ${f2}%0AKEPERLUAN : ${f3}%0AKELUHAN (OPSIONAL) : ${f4}`;
     const url = `https://wa.me/${nomor}?text=${pesan}`;
     window.location.href = url;
 }
